--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
-        applicationId "ciex.edu.mx"
+        applicationId "miidt.edu.mx"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
